My First Angular project

--- a/src/app/EmployeeDetails/employee-details/employee-details.component.html
+++ b/src/app/EmployeeDetails/employee-details/employee-details.component.html
@@ -1,7 +1,8 @@
 <p>
   employee-details works!
+  
 </p>
-
+<a routerLink="" routerLinkActive="active">Go To Home Page</a>
 <table  class="table table-bordered"  >
     <tr class="active">
      <th>
@@ -26,3 +27,4 @@
    </td>
  </tr>
 </table>
+<p>  {{id}}</p>
