--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1> This is Header</h1>
 
 <nav>
+  <!--<a routerLink="" routerLinkActive="active">Go To Home Page</a>--><br>
   <a routerLink="/EmployeeList" routerLinkActive="active">Show Employee List from home page</a>
 </nav>
 
